--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="400px">
+    <img src="Flag_of_Hong_Kong.svg" width="100%">
 
     <ol>
       <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
@@ -17,7 +17,7 @@
     </ol>
 
     <h2>香港 Hong Kong</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg/290px-Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg.png" width="400px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg/290px-Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg.png" width="100%">
     <p>Hong Kong (/ˌhɒŋˈkɒŋ/ (About this soundlisten); Chinese: 香港, Cantonese: [hœ́ːŋ.kɔ̌ːŋ] (About this soundlisten)), officially the Hong Kong Special Administrative Region of the People's Republic of China (HKSAR), is a metropolitan area and special administrative region of China in the eastern Pearl River Delta by the South China Sea. With over 7.5 million people of various nationalities[d] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world.</p>
 
     <p>Hong Kong became a colony of the British Empire after the Qing Empire ceded Hong Kong Island at the end of the First Opium War in 1842.[16] The colony expanded to the Kowloon Peninsula in 1860 after the Second Opium War, and was further extended when Britain obtained a 99-year lease of the New Territories in 1898.[17][18] The whole territory was returned to China in 1997.[19] As a special administrative region, Hong Kong maintains separate governing and economic systems from that of mainland China under a principle of "one country, two systems".[20]</p>
