--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="400px">
+    <img src="Flag_of_Hong_Kong.svg" width="100%">
 
     <ol>
       <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
@@ -17,7 +17,7 @@
     </ol>
 
     <h2>中環 Central</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Hong_Kong_Island_Skyline_2009.jpg/220px-Hong_Kong_Island_Skyline_2009.jpg" width="400px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Hong_Kong_Island_Skyline_2009.jpg/220px-Hong_Kong_Island_Skyline_2009.jpg" width="100%">
     <p>Central (also Central District) is the central business district of Hong Kong. It is located in Central and Western District, on the north shore of Hong Kong Island, across Victoria Harbour from Tsim Sha Tsui, the southernmost point of Kowloon Peninsula. The area was the heart of Victoria City, although that name is rarely used today.</p>
     <p>As the central business district of Hong Kong, it is the area where many multinational financial services corporations have their headquarters. Consulates general and consulates of many countries are also located in this area, as is Government Hill, the site of the government headquarters. The area, with its proximity to Victoria Harbour, has served as the centre of trade and financial activities from the earliest days of the British colonial era in 1841, and continues to flourish and serve as the place of administration after the transfer of sovereignty to China in 1997.</p>
 
