--- a/4.html
+++ b/4.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="400px">
+    <img src="Flag_of_Hong_Kong.svg" width="100%">
 
     <ol>
       <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
@@ -17,7 +17,7 @@
     </ol>
 
     <h2>九龍 Kowloon</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Union_Square_and_Tsim_Sha_Tsui.jpg/250px-Union_Square_and_Tsim_Sha_Tsui.jpg" width="400px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Union_Square_and_Tsim_Sha_Tsui.jpg/250px-Union_Square_and_Tsim_Sha_Tsui.jpg" width="100%">
     <p>Kowloon (/ˌkaʊˈluːn/) is an urban area in Hong Kong comprising the Kowloon Peninsula and New Kowloon. It is bordered by the Lei Yue Mun strait to the east, Mei Foo Sun Chuen and Stonecutter's Island to the west, a mountain range, including Tate's Cairn and Lion Rock to the north, and Victoria Harbour to the south. With a population of 2,019,533 (2 million) and a population density of 43,033/km2 in 2006, it is the most populous urban area in Hong Kong. The peninsula's area is approximately 47 km2 (18 sq mi).</p>
 
   </body>
