--- a/index.html
+++ b/index.html
@@ -28,5 +28,27 @@
 
     <p>Hong Kong is a highly developed territory and ranks fourth on the UN Human Development Index.[28] The city also has the largest number of skyscrapers of any city in the world[when?][29] and its residents have some of the highest life expectancies in the world.[28] The dense space also led to a developed transportation network with public transport rates exceeding 90 percent.[30] Hong Kong is ranked sixth in the Global Financial Centres Index.[31] As of the 2019 annual ranking of the Index of Economic Freedom, Hong Kong has come out on top 25 years in a row, according to the Heritage Foundation, a U.S. conservative libertarian think tank.[32]</p>
 
+    <div id="disqus_thread"></div>
+      <script>
+
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://hkd852.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
   </body>
 </html>
