--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <title>Hong Kong</title>
     <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168652548-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168652548-1');
+    </script>
+
+
   </head>
 
   <body>
@@ -64,6 +75,7 @@
     })();
     </script>
     <!--End of Tawk.to Script-->
+
 
   </body>
 </html>
