--- a/1.html
+++ b/1.html
@@ -3,36 +3,75 @@
   <head>
     <title>Tsim Sha Tsui</title>
     <meta charset="utf-8">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168652548-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-168652548-1');
-    </script>
+    <style>
+    body{
+      margin:0px;
+    }
 
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    h1{
+      font-size: 50px;
+      text-align: center;
+      border-bottom: 1px solid gray;
+      margin: 0px;
+      padding: 20px;
+    }
+    ol{
+        border-right:1px solid gray;
+        width:200px;
+        margin:0px;
+    }
+    li{
+      padding:5px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 240px 1fr;
+    }
+    #grid ol{
+      padding-left:30px;
+      padding-top:20px;
+    }
+    #grid #article{
+      padding-left:10px;
+    }
+
+    @media(max-width:600px){
+      #grid{
+        display:block;
+      }
+      ol{
+        border-right:none;
+      }
+      h1{
+        border-bottom: none;
+      }
+
+    }
+    </style>
 
   </head>
 
   <body>
-
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="100%">
+      <div id="grid">
+        <ol>
+          <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
+          <li><a href="2.html">中環 Central</a></li>
+          <li><a href="3.html">旺角 Mong Kok</a></li>
+          <li><a href="4.html">九龍 Kowloon</a></li>
+        </ol>
+      <div id="article">
+        <h2>尖沙咀 Tsim Sha Tsui</h2>
 
-    <ol>
-      <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
-      <li><a href="2.html">中環 Central</a></li>
-      <li><a href="3.html">旺角 Mong Kok</a></li>
-      <li><a href="4.html">九龍 Kowloon</a></li>
-    </ol>
-
-    <h2>尖沙咀 Tsim Sha Tsui</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Vista_del_Puerto_de_Victoria_desde_Sky100%2C_Hong_Kong%2C_2013-08-09%2C_DD_10.JPG/250px-Vista_del_Puerto_de_Victoria_desde_Sky100%2C_Hong_Kong%2C_2013-08-09%2C_DD_10.JPG" width="100%">
-    <p>Tsim Sha Tsui, often abbreviated as TST, is an urban area in southern Kowloon, Hong Kong. The area is administratively part of the Yau Tsim Mong District.[1] Tsim Sha Tsui East is a piece of land reclaimed from the Hung Hom Bay now east of Tsim Sha Tsui. The area is bounded north by Austin Road and in the east by Hong Chong Road and Cheong Wan Road.</p>
-    <p>Geographically, Tsim Sha Tsui is a cape on the tip of the Kowloon Peninsula pointing towards Victoria Harbour, opposite Central. Several villages had been established in this location before Kowloon was ceded to the British Empire in 1860. Tsim Sha Tsui in Chinese means sharp sandspit. It was also known as Heung Po Tau (香埗頭), i.e. a port for exporting incense tree.</p>
-    <p>Tsim Sha Tsui is a major tourist hub in Hong Kong, with many high-end shops and restaurants that cater to tourists. Many of Hong Kong's museums are located in the area.[2]</p>
-
+        <p>Tsim Sha Tsui, often abbreviated as TST, is an urban area in southern Kowloon, Hong Kong. The area is administratively part of the Yau Tsim Mong District.[1] Tsim Sha Tsui East is a piece of land reclaimed from the Hung Hom Bay now east of Tsim Sha Tsui. The area is bounded north by Austin Road and in the east by Hong Chong Road and Cheong Wan Road.</p>
+        <p>Geographically, Tsim Sha Tsui is a cape on the tip of the Kowloon Peninsula pointing towards Victoria Harbour, opposite Central. Several villages had been established in this location before Kowloon was ceded to the British Empire in 1860. Tsim Sha Tsui in Chinese means sharp sandspit. It was also known as Heung Po Tau (香埗頭), i.e. a port for exporting incense tree.</p>
+        <p>Tsim Sha Tsui is a major tourist hub in Hong Kong, with many high-end shops and restaurants that cater to tourists. Many of Hong Kong's museums are located in the area.[2]</p>
+      </div>
+    </div>
   </body>
 </html>
