--- a/2.html
+++ b/2.html
@@ -3,34 +3,74 @@
   <head>
     <title>Central</title>
     <meta charset="utf-8">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168652548-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-168652548-1');
-    </script>
+    <style>
+    body{
+      margin:0px;
+    }
 
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    h1{
+      font-size: 50px;
+      text-align: center;
+      border-bottom: 1px solid gray;
+      margin: 0px;
+      padding: 20px;
+    }
+    ol{
+        border-right:1px solid gray;
+        width:200px;
+        margin:0px;
+    }
+    li{
+      padding:5px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 240px 1fr;
+    }
+    #grid ol{
+      padding-left:30px;
+      padding-top:20px;
+    }
+    #grid #article{
+      padding-left:10px;
+    }
+
+    @media(max-width:600px){
+      #grid{
+        display:block;
+      }
+      ol{
+        border-right:none;
+      }
+      h1{
+        border-bottom: none;
+      }
+
+    }
+    </style>
 
   </head>
 
   <body>
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="100%">
-
+    <div id="grid">
     <ol>
       <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
       <li><a href="2.html">中環 Central</a></li>
       <li><a href="3.html">旺角 Mong Kok</a></li>
       <li><a href="4.html">九龍 Kowloon</a></li>
     </ol>
-
+    <div id="article">
     <h2>中環 Central</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Hong_Kong_Island_Skyline_2009.jpg/220px-Hong_Kong_Island_Skyline_2009.jpg" width="100%">
+
     <p>Central (also Central District) is the central business district of Hong Kong. It is located in Central and Western District, on the north shore of Hong Kong Island, across Victoria Harbour from Tsim Sha Tsui, the southernmost point of Kowloon Peninsula. The area was the heart of Victoria City, although that name is rarely used today.</p>
     <p>As the central business district of Hong Kong, it is the area where many multinational financial services corporations have their headquarters. Consulates general and consulates of many countries are also located in this area, as is Government Hill, the site of the government headquarters. The area, with its proximity to Victoria Harbour, has served as the centre of trade and financial activities from the earliest days of the British colonial era in 1841, and continues to flourish and serve as the place of administration after the transfer of sovereignty to China in 1997.</p>
-
+  </div>
+</div>
   </body>
 </html>
