--- a/4.html
+++ b/4.html
@@ -3,33 +3,72 @@
   <head>
     <title>Kowloon</title>
     <meta charset="utf-8">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168652548-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    <style>
+    body{
+      margin:0px;
+    }
 
-      gtag('config', 'UA-168652548-1');
-    </script>
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    h1{
+      font-size: 50px;
+      text-align: center;
+      border-bottom: 1px solid gray;
+      margin: 0px;
+      padding: 20px;
+    }
+    ol{
+        border-right:1px solid gray;
+        width:200px;
+        margin:0px;
+    }
+    li{
+      padding:5px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 240px 1fr;
+    }
+    #grid ol{
+      padding-left:30px;
+      padding-top:20px;
+    }
+    #grid #article{
+      padding-left:10px;
+    }
 
+    @media(max-width:600px){
+      #grid{
+        display:block;
+      }
+      ol{
+        border-right:none;
+      }
+      h1{
+        border-bottom: none;
+      }
+
+    }
+    </style>
 
   </head>
 
   <body>
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="100%">
-
+    <div id="grid">
     <ol>
       <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
       <li><a href="2.html">中環 Central</a></li>
       <li><a href="3.html">旺角 Mong Kok</a></li>
       <li><a href="4.html">九龍 Kowloon</a></li>
     </ol>
-
+    <div id="article">
     <h2>九龍 Kowloon</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Union_Square_and_Tsim_Sha_Tsui.jpg/250px-Union_Square_and_Tsim_Sha_Tsui.jpg" width="100%">
-    <p>Kowloon (/ˌkaʊˈluːn/) is an urban area in Hong Kong comprising the Kowloon Peninsula and New Kowloon. It is bordered by the Lei Yue Mun strait to the east, Mei Foo Sun Chuen and Stonecutter's Island to the west, a mountain range, including Tate's Cairn and Lion Rock to the north, and Victoria Harbour to the south. With a population of 2,019,533 (2 million) and a population density of 43,033/km2 in 2006, it is the most populous urban area in Hong Kong. The peninsula's area is approximately 47 km2 (18 sq mi).</p>
 
+    <p>Kowloon (/ˌkaʊˈluːn/) is an urban area in Hong Kong comprising the Kowloon Peninsula and New Kowloon. It is bordered by the Lei Yue Mun strait to the east, Mei Foo Sun Chuen and Stonecutter's Island to the west, a mountain range, including Tate's Cairn and Lion Rock to the north, and Victoria Harbour to the south. With a population of 2,019,533 (2 million) and a population density of 43,033/km2 in 2006, it is the most populous urban area in Hong Kong. The peninsula's area is approximately 47 km2 (18 sq mi).</p>
+</div>
+</div>
   </body>
 </html>
