--- a/index.html
+++ b/index.html
@@ -3,79 +3,74 @@
   <head>
     <title>Hong Kong</title>
     <meta charset="utf-8">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168652548-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-168652548-1');
-    </script>
+    <style>
+    body{
+      margin:0px;
+    }
 
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    h1{
+      font-size: 50px;
+      text-align: center;
+      border-bottom: 1px solid gray;
+      margin: 0px;
+      padding: 20px;
+    }
+    ol{
+        border-right:1px solid gray;
+        width:200px;
+        margin:0px;
+    }
+    li{
+      padding:5px;
+    }
+    #grid{
+      display:grid;
+      grid-template-columns: 240px 1fr;
+    }
+    #grid ol{
+      padding-left:30px;
+      padding-top:20px;
+    }
+    #grid #article{
+      padding-left:10px;
+    }
 
+    @media(max-width:600px){
+      #grid{
+        display:block;
+      }
+      ol{
+        border-right:none;
+      }
+      h1{
+        border-bottom: none;
+      }
+
+    }
+    </style>
   </head>
 
   <body>
 
     <h1><a href="index.html">香港 HongKong </a></h1>
-    <img src="Flag_of_Hong_Kong.svg" width="100%">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oAkCZbmFsU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <ol>
-      <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
-      <li><a href="2.html">中環 Central</a></li>
-      <li><a href="3.html">旺角 Mong Kok</a></li>
-      <li><a href="4.html">九龍 Kowloon</a></li>
-    </ol>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">尖沙咀 Tsim Sha Tsui</a></li>
+        <li><a href="2.html">中環 Central</a></li>
+        <li><a href="3.html">旺角 Mong Kok</a></li>
+        <li><a href="4.html">九龍 Kowloon</a></li>
+      </ol>
 
-    <h2>香港 Hong Kong</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg/290px-Hong_Kong_in_China_%28zoomed%29_%28%2Ball_claims_hatched%29.svg.png" width="100%">
-    <p>Hong Kong (/ˌhɒŋˈkɒŋ/ (About this soundlisten); Chinese: 香港, Cantonese: [hœ́ːŋ.kɔ̌ːŋ] (About this soundlisten)), officially the Hong Kong Special Administrative Region of the People's Republic of China (HKSAR), is a metropolitan area and special administrative region of China in the eastern Pearl River Delta by the South China Sea. With over 7.5 million people of various nationalities[d] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world.</p>
-
-    <p>Hong Kong became a colony of the British Empire after the Qing Empire ceded Hong Kong Island at the end of the First Opium War in 1842.[16] The colony expanded to the Kowloon Peninsula in 1860 after the Second Opium War, and was further extended when Britain obtained a 99-year lease of the New Territories in 1898.[17][18] The whole territory was returned to China in 1997.[19] As a special administrative region, Hong Kong maintains separate governing and economic systems from that of mainland China under a principle of "one country, two systems".[20]</p>
-
-    <p>Originally a sparsely populated area of farming and fishing villages,[16] the territory has become one of the world's most significant financial centres and commercial ports.[21] It is the world's tenth-largest exporter and ninth-largest importer. [22][23] Hong Kong has a major capitalist service economy characterised by low taxation and free trade, and the currency, Hong Kong dollar, is the eighth most traded currency in the world.[24] Hong Kong hosts the largest concentration of ultra high-net-worth individuals of any city in the world.[25][26] Although the city has one of the highest per capita incomes in the world, there is severe income inequality among its residents.[27]</p>
-
-    <p>Hong Kong is a highly developed territory and ranks fourth on the UN Human Development Index.[28] The city also has the largest number of skyscrapers of any city in the world[when?][29] and its residents have some of the highest life expectancies in the world.[28] The dense space also led to a developed transportation network with public transport rates exceeding 90 percent.[30] Hong Kong is ranked sixth in the Global Financial Centres Index.[31] As of the 2019 annual ranking of the Index of Economic Freedom, Hong Kong has come out on top 25 years in a row, according to the Heritage Foundation, a U.S. conservative libertarian think tank.[32]</p>
-
-    <p>---</p>
-
-
-    <div id="disqus_thread"></div>
-    <script>
-
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://https-goyonghoe-github-io-hkd852.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5eda51519e5f6944228ff750/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-
-
+      <div id="article">
+        <h2>香港 Hong Kong</h2>
+        <p>Hong Kong (/ˌhɒŋˈkɒŋ/ (About this soundlisten); Chinese: 香港, Cantonese: [hœ́ːŋ.kɔ̌ːŋ] (About this soundlisten)), officially the Hong Kong Special Administrative Region of the People's Republic of China (HKSAR), is a metropolitan area and special administrative region of China in the eastern Pearl River Delta by the South China Sea. With over 7.5 million people of various nationalities[d] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world.</p>
+      </div>
+    </div>
   </body>
+
 </html>
