--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Hong Kong</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" herf="style.css">
+    <link rel="stylesheet" herf="CSS\style.css?ver=1">
   </head>
 
   <body>
