--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
   <head>
     <title>Tsim Sha Tsui</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" herf="style2.css">
+    <link rel="stylesheet" herf="style.css">
   </head>
 
   <body>
