--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Hong Kong</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" herf="CSS\style.css?ver=1">
+    <link rel="stylesheet" herf="style2.css">
   </head>
 
   <body>
-
     <h1><a href="index.html">香港 HongKong </a></h1>
     <div id="grid">
       <ol>
@@ -23,5 +22,4 @@
       </div>
     </div>
   </body>
-
 </html>
