--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
   <head>
     <title>Central</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" herf="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
