--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   </head>
 
   <body>
+    <!--
+    <input type="button" value="夜 NIGHT" onclick="
+    document.querySelector('body').style.backgroundColor='black';
+    document.querySelector('body').style.color='white';
+    ">
+    <input type="button" value="日 DAY" onclick="
+    document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body').style.color='black';
+    ">
+    -->
+    <input type="button" value="夜 NIGHT" onclick="
+    var target = document.querySelector('body');
+      if(this.value === '夜 NIGHT'){
+        target.style.backgroundColor='black';
+        target.style.color='white';
+        this.value = '日 DAY'
+      } else {
+        target.style.backgroundColor='white';
+        target.style.color='black';
+        this.value = '夜 NIGHT'
+    }
+    ">
+
     <h1><a href="index.html">香港 HongKong </a></h1>
     <div id="grid">
       <ol>
@@ -21,5 +44,16 @@
         <p>Hong Kong (/ˌhɒŋˈkɒŋ/ (About this soundlisten); Chinese: 香港, Cantonese: [hœ́ːŋ.kɔ̌ːŋ] (About this soundlisten)), officially the Hong Kong Special Administrative Region of the People's Republic of China (HKSAR), is a metropolitan area and special administrative region of China in the eastern Pearl River Delta by the South China Sea. With over 7.5 million people of various nationalities[d] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world.</p>
       </div>
     </div>
+    <input type="button" value="夜 NIGHT" onclick="
+      if(this.value === '夜 NIGHT'){
+        document.querySelector('body').style.backgroundColor='black';
+        document.querySelector('body').style.color='white';
+        this.value = '日 DAY'
+      } else {
+        document.querySelector('body').style.backgroundColor='white';
+        document.querySelector('body').style.color='black';
+        this.value = '夜 NIGHT'
+    }
+    ">
   </body>
 </html>
