--- a/ex6.html
+++ b/ex6.html
@@ -10,5 +10,23 @@
     <script>
       var coworkers = ["egoing", "leezche"];
     </script>
+
+    <h2>get</h2>
+    <script>
+        document.write(coworkers[0]);
+        document.write(coworkers[1]);
+    </script>
+
+    <h2>add</h2>
+    <script>
+      coworkers.push('dudu');
+      coworkers.push('taeho');
+    </script>
+
+    <h2>count</h2>
+    <script>
+      document.write(coworkers.length);
+    </script>
+
   </body>
 </html>
