--- a/index.html
+++ b/index.html
@@ -4,47 +4,41 @@
     <title>Hong Kong</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-  </head>
-
-  <body>
-    <!--
-    <input type="button" value="夜 NIGHT" onclick="
-    document.querySelector('body').style.backgroundColor='black';
-    document.querySelector('body').style.color='white';
-    ">
-    <input type="button" value="日 DAY" onclick="
-    document.querySelector('body').style.backgroundColor='white';
-    document.querySelector('body').style.color='black';
-    ">
-    -->
-    <input type="button" value="夜 NIGHT" onclick="
-    var target = document.querySelector('body');
-      if(this.value === '夜 NIGHT'){
+    <script>
+      var target = document.querySelector('body');
+      if(this.value === '夜 NIGHT')
+      {
         target.style.backgroundColor='black';
         target.style.color='white';
         this.value = '日 DAY'
 
         var alist = document.querySelectorAll('a')
         var i = 0;
-        while(i < alist.length){
+        while(i < alist.length)
+        {
           alist[i].style.color = 'powderblue';
           i = i + 1;
         }
-
-      } else {
+      }
+      else
+      {
         target.style.backgroundColor='white';
         target.style.color='black';
         this.value = '夜 NIGHT'
 
         var alist = document.querySelectorAll('a')
         var i = 0;
-        while(i < alist.length){
+        while(i < alist.length)
+        {
           alist[i].style.color = 'blue';
           i = i + 1;
         }
       }
+    </script>
+  </head>
 
-    ">
+  <body>
+    <input type="button" value="夜 NIGHT" onclick="">
 
     <h1><a href="index.html">香港 HongKong </a></h1>
     <div id="grid">
@@ -60,16 +54,20 @@
         <p>Hong Kong (/ˌhɒŋˈkɒŋ/ (About this soundlisten); Chinese: 香港, Cantonese: [hœ́ːŋ.kɔ̌ːŋ] (About this soundlisten)), officially the Hong Kong Special Administrative Region of the People's Republic of China (HKSAR), is a metropolitan area and special administrative region of China in the eastern Pearl River Delta by the South China Sea. With over 7.5 million people of various nationalities[d] in a 1,104-square-kilometre (426 sq mi) territory, Hong Kong is one of the most densely populated places in the world.</p>
       </div>
     </div>
+
     <input type="button" value="夜 NIGHT" onclick="
-      if(this.value === '夜 NIGHT'){
+      if(this.value === '夜 NIGHT')
+      {
         document.querySelector('body').style.backgroundColor='black';
         document.querySelector('body').style.color='white';
         this.value = '日 DAY'
-      } else {
+      }
+      else
+      {
         document.querySelector('body').style.backgroundColor='white';
         document.querySelector('body').style.color='black';
         this.value = '夜 NIGHT'
-    }
+      }
     ">
   </body>
 </html>
