--- a/2.html
+++ b/2.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <input type="button" value="夜 NIGHT" onclick="
+    nightDayHandler(this);
+    ">
     <h1><a href="index.html">香港 HongKong </a></h1>
 
     <div id="grid">
