--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hong Kong</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script scr="colors.js"></script>
+    <script src="colors.js"></script>
   </head>
 
   <body>
