--- a/3.html
+++ b/3.html
@@ -4,6 +4,7 @@
     <title>Mong Kok</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="colors.js"></script>
   </head>
 
   <body>
