--- a/4.html
+++ b/4.html
@@ -4,6 +4,7 @@
     <title>Kowloon</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="colors.js"></script>
   </head>
 
   <body>
